--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            
             <!--Logo-->
             <div id="logo" class="justify-content-center">
-                <img id="img-logo" src="/content/livro t1.png" alt="T">
+                <img id="img-logo" src="content/livro t1.png" alt="T">
                 <div id="texto-logo">
                     <div style="height: 28px; width: 24px;">radição</div>
                     <div>Feirense</div>
@@ -66,7 +66,7 @@
 
     <!-- Caixa principal -->
     <div id="main-container">
-        <img id="fundo" src="/content/fundo-pag-princ.jpg" alt="fundo" class="background-image">
+        <img id="fundo" src="content/fundo-pag-princ.jpg" alt="fundo" class="background-image">
         <div id="main-text">
             <p>O Samba de Roda, uma manifestação tradicional bahiana, é muito mais que uma forma de 
             entretenimento: é uma expressão de identidade étnica e de pertencimento. Venha conhecer mais de perto!</p>
@@ -75,19 +75,19 @@
             <div class="slider-wrapper carousel-inner">
                     <div class="slider-item carousel-item ">
                         <a href="#" class="slider-link">
-                            <img id="imgs" src="/content/quixabeira-main.png" alt="Quixabeira da Matinha">
+                            <img id="imgs" src="content/quixabeira-main.png" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Samba de Roda</h2>
                         </a>
                     </div>
                     <div class="slider-item carousel-item">
                         <a href="#" class="slider-link">
-                            <img id="imgs" src="/content/quixabeira-main.png" alt="Quixabeira da Matinha">
+                            <img id="imgs" src="content/quixabeira-main.png" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Samba de Roda</h2>
                         </a>
                     </div>
                     <div class="slider-item carousel-item active">
                         <a href="#" class="slider-link">
-                            <img id="imgs" src="/content/quixabeira-main.png" alt="Quixabeira da Matinha">
+                            <img id="imgs" src="content/quixabeira-main.png" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Samba de Roda</h2>
                         </a>
                     </div>
