--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 </head>
 
 <body>
-<div class="container-fluid" style="padding: 0px; margin: 0px; height: 100vh; display: flex; flex-direction: column;">
+<div class="main-container">
     <!-- Primeira barra de navegação -->
     <nav id="navbar1" class="navbar p-0 sticky-top">
             <div id="navbar1-div" class="container-fluid justify-content-right p-1 m-0">
            
             <!--Logo-->
-            <div id="logo" class="justify-content-center">
-                <img id="img-logo" src="https://mickaelced.github.io/site/content/livro t1.png" alt="T">
-                <div id="texto-logo">
+            <div class="logo justify-content-center">
+                <img class="img-logo" src="https://mickaelced.github.io/site/content/livro t1.png" alt="T">
+                <div class="texto-logo">
                     <div style="height: 28px; width: 24px;">radição</div>
                     <div>Feirense</div>
                 </div>
@@ -45,7 +45,7 @@
             </button>
 
             <!-- Barra contendo os itens -->
-            <div class="collapse navbar-collapse" id="navbaritems">
+            <div class="navbar-items collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="i1">Início</a>
@@ -64,12 +64,11 @@
         </div>
     </nav>
 
-    <!-- Caixa principal -->
-    <div id="main-container">
-        <img id="fundo" src="https://mickaelced.github.io/site/content/img-1.jpg" alt="fundo" class="background-image">
-        <div id="main-text">
+    <div class="container01">
+        <img class="fundo" src="https://mickaelced.github.io/site/content/fundo-pag-princ.jpg" alt="fundo" class="background-image">
+        <div class="main-text">
             <p>O Samba de Roda, uma manifestação tradicional bahiana, é muito mais que uma forma de 
-            entretenimento: é uma expressão de identidade étnica e de pertencimento. Venha conhecer mais de perto !</p>
+            entretenimento: é uma expressão de identidade étnica e de pertencimento. Venha conhecer mais de perto!</p>
         </div>
         <div class="slider carousel slide" data-ride="carousel">
             <div class="slider-wrapper carousel-inner">
@@ -82,13 +81,13 @@
                     <div class="slider-item carousel-item">
                         <a href="#" class="slider-link">
                             <img id="imgs" src="https://mickaelced.github.io/site/content/quixabeira-main.png" alt="Quixabeira da Matinha">
-                            <h2 class="slider-texto">Samba de Roda</h2>
+                            <h2 class="slider-texto">Comunidade</h2>
                         </a>
                     </div>
                     <div class="slider-item carousel-item active">
                         <a href="#" class="slider-link">
                             <img id="imgs" src="https://mickaelced.github.io/site/content/quixabeira-main.png" alt="Quixabeira da Matinha">
-                            <h2 class="slider-texto">Samba de Roda</h2>
+                            <h2 class="slider-texto">Redes Sociais</h2>
                         </a>
                     </div>
                 </div>
