--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </button>
 
             <!-- Barra contendo os itens -->
-            <div class="navbar-items collapse navbar-collapse">
+            <div id="navbar-items" class="navbar-items collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="i1">Início</a>
