--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            
             <!--Logo-->
             <div class="logo justify-content-center">
-                <img class="img-logo" src="https://mickaelced.github.io/site/content/livro t1.png" alt="T">
+                <img class="img-logo" src="https://mickaelced.github.io/samba-de-roda/content/livro t1.png" alt="T">
                 <div class="texto-logo">
                     <div style="height: 28px; width: 24px;">radição</div>
                     <div>Feirense</div>
@@ -65,7 +65,7 @@
     </nav>
 
     <div class="container01">
-        <img class="fundo" src="https://mickaelced.github.io/site/content/fundo-pag-princ.jpg" alt="fundo" class="background-image">
+        <img class="fundo" src="https://mickaelced.github.io/samba-de-roda/content/fundo-pag-princ.jpg" alt="fundo" class="background-image">
         <div class="main-text">
             <p>O Samba de Roda, uma manifestação tradicional bahiana, é muito mais que uma forma de 
             entretenimento: é uma expressão de identidade étnica e de pertencimento. Venha conhecer mais de perto!</p>
@@ -80,13 +80,13 @@
                     </div>
                     <div class="slider-item carousel-item">
                         <a href="#" class="slider-link">
-                            <img id="imgs" src="https://mickaelced.github.io/site/content/quixabeira-main.png" alt="Quixabeira da Matinha">
+                            <img id="imgs" src="https://mickaelced.github.io/samba-de-roda/content/quixabeira-main.png" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Comunidade</h2>
                         </a>
                     </div>
                     <div class="slider-item carousel-item active">
                         <a href="#" class="slider-link">
-                            <img id="imgs" src="https://mickaelced.github.io/site/content/quixabeira-main.png" alt="Quixabeira da Matinha">
+                            <img id="imgs" src="https://mickaelced.github.io/samba-de-roda/content/quixabeira-main.png" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Redes Sociais</h2>
                         </a>
                     </div>
