--- a/index.html
+++ b/index.html
@@ -36,33 +36,19 @@
     </nav>
 
     <!-- Segunda barra de navegação -->
-    <nav id="navbar2" class="navbar navbar-expand-lg pt-0 pb-0 pr-0 pl-0">
-        <div id="navbar2-div" class="container-fluid justify-content-rightshadow-lg" >
-            <!-- Botão p/ expandir em telas menores -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbaritems"
-                aria-controls="navbaritems" aria-expanded="false">
-                <span class="navbar-toggler-icon" id="l1"></span>
-            </button>
-
-            <!-- Barra contendo os itens -->
-            <div id="navbar-items" class="navbar-items collapse navbar-collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="i1">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="i1">Samba de Roda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="i1">Comunidade</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="i1">Redes Sociais</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div id="navbar2"> 
+        <ul class="navbar-items">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Samba de Roda</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Comunidade</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Quem somos</a>
+            </li>
+        </ul>
+    </div>
 
     <div class="container01">
         <img class="fundo" src="https://mickaelced.github.io/samba-de-roda/content/fundo-pag-princ.jpg" alt="fundo" class="background-image">
@@ -87,7 +73,7 @@
                     <div class="slider-item carousel-item active">
                         <a href="#" class="slider-link">
                             <img id="imgs" src="https://mickaelced.github.io/samba-de-roda/content/quixabeira-main.png" alt="Quixabeira da Matinha">
-                            <h2 class="slider-texto">Redes Sociais</h2>
+                            <h2 class="slider-texto">Quem somos</h2>
                         </a>
                     </div>
                 </div>
