--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <div id="navbar2"> 
         <ul class="navbar-items">
             <li class="nav-item">
-                <a class="nav-link" href="#">Samba de Roda</a>
+                <a class="nav-link" href="#">Comunidade</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Comunidade</a>
+                <a class="nav-link" href="#">Samba de Roda</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Quem somos</a>
@@ -51,26 +51,26 @@
     </div>
 
     <div class="container01">
-        <img class="fundo" src="https://mickaelced.github.io/samba-de-roda/content/fundo-pag-princ.jpg" alt="fundo" class="background-image">
+        <img class="fundo background-image" src="content/fundo-pag-princ.jpg" alt="fundo">
         <div class="main-text">
             <p>O Samba de Roda, uma manifestação tradicional bahiana, é muito mais que uma forma de 
             entretenimento: é uma expressão de identidade étnica e de pertencimento. Venha conhecer mais de perto!</p>
         </div>
         <div class="slider carousel slide" data-ride="carousel">
             <div class="slider-wrapper carousel-inner">
-                    <div class="slider-item carousel-item ">
+                    <div class="slider-item carousel-item active">
                         <a href="#" class="slider-link">
-                            <img id="imgs" src="content/quixabeira-main.png" alt="Quixabeira da Matinha">
-                            <h2 class="slider-texto">Samba de Roda</h2>
+                            <img id="imgs" src="content/comunidade.png" alt="Quixabeira da Matinha">
+                            <h2 class="slider-texto">Comunidade</h2>
                         </a>
                     </div>
                     <div class="slider-item carousel-item">
                         <a href="#" class="slider-link">
-                            <img id="imgs" src="https://mickaelced.github.io/samba-de-roda/content/quixabeira-main.png" alt="Quixabeira da Matinha">
-                            <h2 class="slider-texto">Comunidade</h2>
+                            <img id="imgs" src="content/samba-de-roda.jpg" alt="Quixabeira da Matinha">
+                            <h2 class="slider-texto">Samba de Roda</h2>
                         </a>
                     </div>
-                    <div class="slider-item carousel-item active">
+                    <div class="slider-item carousel-item">
                         <a href="#" class="slider-link">
                             <img id="imgs" src="https://mickaelced.github.io/samba-de-roda/content/quixabeira-main.png" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Quem somos</h2>
@@ -84,6 +84,10 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
               </a>
         </div>
+    </div>
+
+    <div id="footer">
+        <img class="unex-logo" src="content/unex.png" alt="fundo">
     </div>
 </div>
 
