--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tradição Feirense</title>
     
+    <!-- Main CSS -->
     <link rel="stylesheet" href="css_main.css">
-
     <!-- Bootstrap CSS -->
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
 
@@ -15,7 +15,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -39,13 +38,13 @@
     <div id="navbar2"> 
         <ul class="navbar-items">
             <li class="nav-item">
-                <a class="nav-link" href="#">Comunidade</a>
+                <a class="nav-link" href="comunidade.html">Comunidade</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Samba de Roda</a>
+                <a class="nav-link" href="samba.html">Samba de Roda</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Quem somos</a>
+                <a class="nav-link" href="quem_somos.html">Quem somos</a>
             </li>
         </ul>
     </div>
@@ -59,19 +58,19 @@
         <div id="carousel1" class="slider carousel slide" data-bs-ride="carousel">
             <div class="slider-wrapper carousel-inner">
                     <div class="slider-item carousel-item active">
-                        <a href="#" class="slider-link">
+                        <a href="comunidade.html" class="slider-link">
                             <img id="imgs" src="content/comunidade.png" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Comunidade</h2>
                         </a>
                     </div>
                     <div class="slider-item carousel-item">
-                        <a href="#" class="slider-link">
+                        <a href="samba.html" class="slider-link">
                             <img id="imgs" src="content/samba-de-roda.jpg" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Samba de Roda</h2>
                         </a>
                     </div>
                     <div class="slider-item carousel-item">
-                        <a href="#" class="slider-link">
+                        <a href="quem_somos.html" class="slider-link">
                             <img id="imgs" src="content/quixabeira-main.png" alt="Quixabeira da Matinha">
                             <h2 class="slider-texto">Quem somos</h2>
                         </a>
