--- a/quem_somos.html
+++ b/quem_somos.html
@@ -105,6 +105,15 @@
                     <li>Ellen Karoline Navarro da Silva</li>
                 </ul>
             </p>
+
+            <p><em>Confira abaixo o nosso pitch:</em></p>
+            <iframe 
+                src="https://drive.google.com/file/d/19aAkzhW4u0BeqXM8ubom-WcNRltNuAIM/preview" 
+                width="80%" 
+                height="400vh" 
+                allow="autoplay"
+                allowfullscreen>
+            </iframe>
         </div>
     </div>
 
